# packages/worker/api/api/openapi.yaml
@@ -114,41 +114,6 @@ components:
       - rootUrl
       - type
       type: object
-    StagingCommandName:
-      enum:
-      - writeFileContent
-      - relink
-      - symlink
-      - copy
-      - mkdir
-      type: string
-    StagingCommand:
-      example:
-        mode: 0
-        ensureWritable: true
-        command: null
-        content: content
-        recursive: true
-        target: target
-        resolved: resolved
-      properties:
-        command:
-          $ref: '#/components/schemas/StagingCommandName'
-        target:
-          type: string
-        resolved:
-          type: string
-        content:
-          type: string
-        mode:
-          type: integer
-        ensureWritable:
-          type: boolean
-        recursive:
-          type: boolean
-      required:
-      - command
-      type: object
     CommandString:
       items:
         $ref: '#/components/schemas/CommandString_inner'
@@ -273,7 +238,7 @@ components:
           key: env
         outputBaseDir: outputBaseDir
         networkaccess: true
-        timelimit: 6
+        timelimit: 0
         inplace_update: true
         stderr_path: stderr_path
         cwd: cwd
@@ -297,21 +262,6 @@ components:
           resolved: resolved
           target: target
         id: id
-        staging:
-        - mode: 0
-          ensureWritable: true
-          command: null
-          content: content
-          recursive: true
-          target: target
-          resolved: resolved
-        - mode: 0
-          ensureWritable: true
-          command: null
-          content: content
-          recursive: true
-          target: target
-          resolved: resolved
         dockerExec: dockerExec
         commands:
         - null
@@ -348,10 +298,6 @@ components:
       properties:
         id:
           type: string
-        staging:
-          items:
-            $ref: '#/components/schemas/StagingCommand'
-          type: array
         commands:
           items:
             $ref: '#/components/schemas/CommandString'
@@ -408,7 +354,6 @@ components:
       - networkaccess
       - outputBindings
       - runtime
-      - staging
       type: object
     _api_jobFailed_post_request:
       properties:
